[package]
name = "ashfur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-macros = "0.3"
serde = "1.0"
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json", "offline"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
chrono = { version = "0.4", features = ["serde"]}
futures-util = "0.3"
ring = "0.16"
data-encoding = "2.3"
ts-rs = "6.2"
tower-http = { version = "0.3", features = ["cors"] }
rand = "0.8"
serde_yaml = "0.9"
once_cell = "1.17"
strum = "0.25"
strum_macros = "0.25"
moka = { version = "0.11", default-features = true, features = ["future", "logging"] }
async-trait = "0.1"

[dependencies.tokio]
version = "1"
default-features = true
features = ["full"]

[build-dependencies]
vergen = "7"
anyhow = "1.0"

[dependencies.mongodb]
version = "2.6"
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4", "bson-serde_with"]
